# my-finance

./: .env  Cargo.toml  README.md
src/: main.rs
src/domain/: PollerService.rs  mod.rs  poll_service.rs
src/domain/records/: mod.rs  vantage_records.rs
src/domain/services/: poll_service.rs
temp/domain/: PollerService.rs  records.rs
temp/domain/records/: VantageEMA.rs
